# Library-for-Debian

./: .emacs  setup.sh  Инструкция по добалению сторонних библиотек.txt  Инструкция по использованию системы.txt  Руководство пользователя по использованию параллельной системы.txt
.emacs.d/.cask/24.5/bootstrap/commander-20140120.1052/: commander-autoloads.el  commander-pkg.el  commander-pkg.elc
.emacs.d/.cask/24.5/bootstrap/dash-20180413.30/: dash-autoloads.el
.emacs.d/.cask/24.5/bootstrap/epl-20180205.1249/: epl-autoloads.el
.emacs.d/.cask/24.5/bootstrap/f-20180106.122/: f-autoloads.el
.emacs.d/.cask/24.5/bootstrap/git-20140128.241/: git-autoloads.el  git-pkg.el  git-pkg.elc
.emacs.d/.cask/24.5/bootstrap/package-build-20180414.938/: package-build-autoloads.el  package-build-badges.elc  package-build.elc  package-recipe-mode.elc  package-recipe.elc
.emacs.d/.cask/24.5/bootstrap/s-20180406.108/: s-autoloads.el
.emacs.d/.cask/24.5/bootstrap/shut-up-20150423.522/: shut-up-autoloads.el  shut-up-pkg.el  shut-up-pkg.elc
.emacs.d/elpa/archives/gnu/: archive-contents.signed
.emacs.d/elpa/auto-complete-20170124.1845/: auto-complete-autoloads.el
.emacs.d/elpa/exec-path-from-shell-0/: exec-path-from-shell-autoloads.el  exec-path-from-shell-pkg.elc  exec-path-from-shell.elc
.emacs.d/elpa/popup-20160709.729/: popup-autoloads.el
.emacs.d/emacs-dashboard-master/: dashboard-widgets.el
.emacs.d/lisp/: cmake-font-lock.el
.emacs.d/lisp/auto-complete/: auto-complete-autoloads.el
NumLib/: CMakeLists.txt  Read.me.md
NumLib/bnch/: bench_cblock.f90  bench_cells.f90  bench_classic.f90  bench_custom.f90  bench_determinant.f90  bench_diff.f90  bench_gauss.f90  bench_gaussi.f90  bench_invgj.f90  bench_invslau.f90  bench_jacobi.f90  bench_lu.f90  bench_montekarlo.f90  bench_mpi_cannon.f90  bench_mpi_cblock.f90  bench_mpi_cells.f90  bench_mpi_classic.f90  bench_mpi_determinant.f90  bench_mpi_diff.f90  bench_mpi_fox.f90  bench_mpi_gauss.f90  bench_mpi_gaussi.f90  bench_mpi_invgj.f90  bench_mpi_invslau.f90  bench_mpi_jacobi.f90  bench_mpi_lu.f90  bench_mpi_montekarlo.f90  bench_mpi_newton.f90  bench_mpi_odu.f90  bench_mpi_scalar_mult.f90  bench_mpi_shultz.f90  bench_mpi_simpson.f90  bench_mpi_sort_merge.f90  bench_mpi_squares.f90  bench_mpi_strassen.f90  bench_mpi_sum.f90  bench_mpi_tda.f90  bench_mpi_zeidel.f90  bench_mymult_vs_matmul.f90  bench_newton.f90  (+10 more)
NumLib/src/ELEMENTARY/: norm.f90  numdiff.f90  psum.f90  sort_merge.f90
NumLib/src/INTEGRAL/: cells.f90  gaussi.f90  montekarlo.f90  simpson.f90  squares.f90
NumLib/src/INV/: invgj.f90  invslau.f90  shultz.f90
NumLib/src/LA/: cannon.f90  cblock.f90  classic.f90  fox.f90  matvecutil.f90  strassen.f90
NumLib/src/LP/: affinescaling.f90  simplex.f90
NumLib/src/ODU/: A5.f90  eiler.f90  rk.f90
NumLib/src/SLAU/: determinant.f90  gauss.f90  jacobi.f90  kramer.f90  lud.f90  tda.f90  zeidel.f90
NumLib/src/ULA/: newton.f90
NumLib/src/Utils/: mpi_manager.f90  read_mps.f90  strings.f90  utilities.f90
NumLib/tst/: gen-ip002.mps  test_cblock.f90  test_cells.f90  test_classic.f90  test_determinant.f90  test_diff_gradient.f90  test_different.f90  test_gauss.f90  test_gaussi.f90  test_invgj.f90  test_invslau.f90  test_jacobi.f90  test_jacobi_matrix.f90  test_kramer.f90  test_lu.f90  test_ludec.f90  test_matrix_vector.f90  test_montekarlo.f90  test_mpi_cannon.f90  test_mpi_cblock.f90  test_mpi_cells.f90  test_mpi_classic.f90  test_mpi_determinant.f90  test_mpi_fox.f90  test_mpi_gauss.f90  test_mpi_gaussi.f90  test_mpi_invgj.f90  test_mpi_invslau.f90  test_mpi_jacobi.f90  test_mpi_lu.f90  test_mpi_ludec.f90  test_mpi_matrix_vector.f90  test_mpi_montekarlo.f90  test_mpi_newton.f90  test_mpi_odu.f90  test_mpi_scalar_mult.f90  test_mpi_shultz.f90  test_mpi_simpson.f90  test_mpi_sort_merge.f90  test_mpi_squares.f90  (+16 more)
Plot/: CMakeLists.txt
Plot/AF03GL/: OpenGL_freeglut.f90  OpenGL_gl.f90  OpenGL_glu.f90
Plot/Plotter/src/: plotter.f90
Plot/Plotter/tst/: test_function_many_basic.f90  test_function_many_discontinuous.f90  test_function_one_basic.f90  test_function_one_discontinuous.f90  test_functions.f90  test_points_many_basic.f90  test_points_many_discontinuous.f90  test_points_many_perforated.f90  test_points_one_basic.f90  test_points_one_discontinuous.f90  test_points_one_perforated.f90  test_surfaces_many.f90  test_surfaces_one.f90
